add background image of bg-dark and bg-light className

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@ rgb(247, 100, 247) */
 }
 
 .bg-dark, .bg-light {
-    background-image: URL("https://www.xtrafondos.com/wallpapers/3d-abstraccion-morado-7934.jpg");
+    background-image: URL("https://img.freepik.com/vector-gratis/diseno-fondo-efecto-neon_52683-71977.jpg?w=740&t=st=1717924277~exp=1717924877~hmac=23220f86892d56ae33a9b08d8dbe37e13bd06b943ab7eef6640388305e4a6c13");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
